--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#EF4C45</color>
-    <color name="colorPrimaryDark">#CD2E30</color>
+    <color name="colorPrimaryDark">#cd2e30</color>
     <color name="colorAccent">#535E6F</color>
     <color name="colorPlayer1">#FFCC04</color>
-    <color name="colorPlayer2">#BED630</color>
+    <color name="colorPlayer2">#bed630</color>
+
+    <color name="black_overlay">#66000000</color>
 </resources>
