--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,20 +10,22 @@
 
     <style name="btnGame" parent="@style/Widget.AppCompat.Button.Small">
         <item name="android:textAppearance">?android:textAppearanceLarge</item>
-        <item name="android:textColor">@color/colorAccent</item>
+        <item name="android:textColor">#FFF</item>
         <item name="android:textSize">60sp</item>
+        <item name="android:background">#FFF</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:layout_width">110dp</item>
-        <item name="android:layout_height">110dp</item>
+        <item name="android:layout_width">100dp</item>
+        <item name="android:layout_height">100dp</item>
         <item name="android:layout_margin">3dp</item>
     </style>
 
     <style name="score" parent="@style/Widget.AppCompat.Button.Small">
         <item name="android:textAppearance">?android:textAppearanceLarge</item>
-        <item name="android:textColor">@color/colorAccent</item>
+        <item name="android:textColor">@android:color/white</item>
         <item name="android:background">@android:color/transparent</item>
         <item name="android:textSize">60sp</item>
         <item name="android:textStyle">bold</item>
+        <item name="android:gravity">center</item>
         <item name="android:layout_width">110dp</item>
         <item name="android:layout_height">110dp</item>
         <item name="android:layout_margin">3dp</item>
